--- a/_posts/2016-01-12-iOS 数据持久化.md
+++ b/_posts/2016-01-12-iOS 数据持久化.md
@@ -15,7 +15,7 @@ header-img: "img/post-bg-01.jpg"
 
 * **应用沙盒一般包括以下几个文件目录:**
 
-```objective-c
+```objc
 .app
 Documents
 Library  
@@ -26,49 +26,49 @@ tmp
 
 ## **目录简介及获取**
 * **沙盒根目录获取**: 获取如下
-```objective-c
+```objc
 NSString *homePath = NSHomeDirectory();
 NSLog(@"%@", homePath);
 ```
 <br/>
 
 * **.app文件**: 这里面存放的是应用程序的源文件，包括资源文件和可执行文件。
-```objective-c
+```objc
 NSString *appPath = [[NSBundle mainBundle] bundlePath];
 NSLog(@"%@", appPath);
 ```
 <br/>
 
 * **Documents**: 保存应用运行时生成的需要持久化的数据，`iTunes` 会自动备份该目录。
-```objective-c
+```objc
 NSString *documentPath = NSSearchPathForDirectoriesInDomains(NSDocumentDirectory, NSUserDomainMask, YES).firstObject;
 NSLog(@"%@", documentPath);
 ```
 <br/>
 
 * **tmp**: 保存应用运行时所需的临时数据，使用完毕后再将对应的文件从该目录删除，应用没有运行时，系统也可能会自动清理该目录下的文件，`iTunes` 不会同步该目录，iPhone 重启时该目录下的文件会丢失。
-```objective-c
+```objc
 NSString *tmpPath = NSTemporaryDirectory();
 NSLog(@"%@", tmpPath);
 ```
 <br/>
 
 * **Library**: 存储程序的默认设置和其他状态信息，`iTunes `会自动备份该目录。
-```objective-c
+```objc
 NSString *libraryPath = NSSearchPathForDirectoriesInDomains(NSLibraryDirectory, NSUserDomainMask, YES).firstObject;
 NSLog(@"%@", libraryPath);
 ```
 <br/>
 
 * **Library/Caches**: 存放缓存文件，`iTunes`不会备份此目录，此目录下文件不会在应用退出时删除，一般存放体积比较大，不是很重要的资源
-```objective-c
+```objc
 NSString *cachesPath = NSSearchPathForDirectoriesInDomains(NSCachesDirectory, NSUserDomainMask, YES).firstObject;
 NSLog(@"%@", cachesPath);
 ```
 <br/>
 
 * **Library/Preferences**: 保存应用的所有偏好设置，iOS 的 `Setting（设置）`会在该目录中查找应用的设置信息，iTunes会自动备份该目录。
-```objective-c
+```objc
 NSString *preferencesPath = NSSearchPathForDirectoriesInDomains(NSLibraryDirectory, NSUserDomainMask, YES).firstObject;
 preferencesPath = [preferencesPath stringByAppendingPathComponent:@"Preferences"];
 NSLog(@"%@", preferencesPath);
@@ -87,7 +87,7 @@ NSLog(@"%@", preferencesPath);
 ## **plist（属性列表）**
 属性列表文件是一种 `XML` 文件，`Foundation` 框架中的一些对象可以与属性列表文件互相转换，可转换的类型如下：
 
-```objective-c
+```objc
 NSArray;
 NSMutableArray;
 NSDictionary;
@@ -102,7 +102,7 @@ NSNumber;
 <br/>
 
 #### 存储和使用
-```objective-c
+```objc
 // 获取存储文件的路径
 NSString *documentPath = NSSearchPathForDirectoriesInDomains(NSDocumentDirectory, NSUserDomainMask, YES).firstObject;
 NSString *fileName = [documentPath stringByAppendingPathComponent:@"storage.plist"];
@@ -181,8 +181,7 @@ NSLog(@"name : %@, isMale :%d, age :%ld", nameStr, isMale, age);
 对一个对象进行完整归档需要满足的条件为：该对象的类必须实现`NSCoding`协议，而且每个成员变量应该是基本数据类型或者都是实现了`NSCoding`协议的某个类的实例。
 
 创建一个`Car`类，使其实现`NSCoding`协议
-```objective-c
-.h
+```objc
 @interface Car : NSObject <NSCoding>
 
 @property (nonatomic, copy) NSString *name;
@@ -191,7 +190,7 @@ NSLog(@"name : %@, isMale :%d, age :%ld", nameStr, isMale, age);
 
 @end
 
-.m
+
 @implementation Car
 
 - (void)encodeWithCoder:(NSCoder *)aCoder
@@ -212,7 +211,7 @@ NSLog(@"name : %@, isMale :%d, age :%ld", nameStr, isMale, age);
 ```
 
 对其进行归档和解档
-```objective-c
+```objc
 // 创建对象
 Car *car = [[Car alloc] init];
 car.name = @"Aventador";
@@ -250,7 +249,7 @@ NSLog(@"car :%@ , speed :%ld", unarchiveCar.name, unarchiveCar.speed);
 ![addLibrary](http://cl.ly/3D1M0P373W38/Image%202016-01-19%20at%2010.52.22%20%E4%B8%8A%E5%8D%88.png)
 
 然后导入头文件
-```objective-c
+```objc
 #import <sqlite3.h>
 ```
 
@@ -268,7 +267,7 @@ NSLog(@"car :%@ , speed :%ld", unarchiveCar.name, unarchiveCar.speed);
 * **sqlite_close**: 关闭数据库连接
 
 #### **创建表**
-```objective-c
+```objc
 // 获取文件路径名
 NSString *fileName = [NSSearchPathForDirectoriesInDomains(NSDocumentDirectory, NSUserDomainMask, YES).firstObject stringByAppendingString:@"person.sqlite"];
 
@@ -299,7 +298,7 @@ if (openResult == SQLITE_OK) {
 ```
 
 #### **插入数据**
-```objective-c
+```objc
 // 插入10条数据
 for (int i = 1; i < 10; i++) {
     NSString *nameStr = [NSString stringWithFormat:@"happyo%i", i];
@@ -319,7 +318,8 @@ NSLog(@"插入成功");
 ```
 
 #### **查询**
-```objective-c
+
+```objc
 // 查询数据
 NSString *sqlQuery = @"SELECT name, age FROM person_info";
 sqlite3_stmt *stmt;
