修改文章样式

--- a/_posts/2016-01-12-iOS 数据持久化.md
+++ b/_posts/2016-01-12-iOS 数据持久化.md
@@ -8,86 +8,81 @@ header-img: "img/post-bg-01.jpg"
 
 >数据持久化即数据的永久存储。在 iOS 中，是将数据保存成文件，存储到程序的沙盒中。
 
-## **沙盒**
-* **每个 iOS 应用都有自己的应用沙盒，应用沙盒就是文件系统目录，与其他应用放入文件 系统隔离，iOS 系统不允许访问其他应用的应用沙盒，但在 ios8 中已经开放访问（extension）**
+# 沙盒
+- 每个 iOS 应用都有自己的应用沙盒，应用沙盒就是文件系统目录，与其他应用放入文件 系统隔离，iOS 系统不允许访问其他应用的应用沙盒，但在 ios8 中已经开放访问（extension）
+- extension 是 iOS8 新开放的一种对几个固定系统区域的拓展机制，它可以在一定程度上弥补 iOS 的沙盒机制对应用间的通信限制
+- 应用沙盒一般包括以下几个文件目录:
 
-* **extension 是 iOS8 新开放的一种对几个固定系统区域的拓展机制，它可以在一定程度上弥补 iOS 的沙盒机制对应用间的通信限制**
-
-* **应用沙盒一般包括以下几个文件目录:**
-
-```objc
+{% highlight objc %}
 .app
 Documents
 Library  
 ---Caches
 ---Preferences
 tmp
-```
+{% endhighlight %}
 
-## **目录简介及获取**
-* **沙盒根目录获取**: 获取如下
-```objc
+---
+
+# 目录简介及获取
+- **沙盒根目录获取**: 获取如下
+{% highlight objc %}
 NSString *homePath = NSHomeDirectory();
 NSLog(@"%@", homePath);
-```
-<br/>
+{% endhighlight %}
 
-* **.app文件**: 这里面存放的是应用程序的源文件，包括资源文件和可执行文件。
-```objc
+- **.app文件**: 这里面存放的是应用程序的源文件，包括资源文件和可执行文件。
+{% highlight objc %}
 NSString *appPath = [[NSBundle mainBundle] bundlePath];
 NSLog(@"%@", appPath);
-```
-<br/>
+{% endhighlight %}
 
-* **Documents**: 保存应用运行时生成的需要持久化的数据，`iTunes` 会自动备份该目录。
-```objc
+- **Documents**: 保存应用运行时生成的需要持久化的数据，`iTunes` 会自动备份该目录。
+{% highlight objc %}
 NSString *documentPath = NSSearchPathForDirectoriesInDomains(NSDocumentDirectory, NSUserDomainMask, YES).firstObject;
 NSLog(@"%@", documentPath);
-```
-<br/>
+{% endhighlight %}
 
-* **tmp**: 保存应用运行时所需的临时数据，使用完毕后再将对应的文件从该目录删除，应用没有运行时，系统也可能会自动清理该目录下的文件，`iTunes` 不会同步该目录，iPhone 重启时该目录下的文件会丢失。
-```objc
+- **tmp**: 保存应用运行时所需的临时数据，使用完毕后再将对应的文件从该目录删除，应用没有运行时，系统也可能会自动清理该目录下的文件，`iTunes` 不会同步该目录，iPhone 重启时该目录下的文件会丢失。
+{% highlight objc %}
 NSString *tmpPath = NSTemporaryDirectory();
 NSLog(@"%@", tmpPath);
-```
-<br/>
+{% endhighlight %}
 
-* **Library**: 存储程序的默认设置和其他状态信息，`iTunes `会自动备份该目录。
-```objc
+- **Library**: 存储程序的默认设置和其他状态信息，`iTunes `会自动备份该目录。
+{% highlight objc %}
 NSString *libraryPath = NSSearchPathForDirectoriesInDomains(NSLibraryDirectory, NSUserDomainMask, YES).firstObject;
 NSLog(@"%@", libraryPath);
-```
-<br/>
+{% endhighlight %}
 
-* **Library/Caches**: 存放缓存文件，`iTunes`不会备份此目录，此目录下文件不会在应用退出时删除，一般存放体积比较大，不是很重要的资源
-```objc
+- **Library/Caches**: 存放缓存文件，`iTunes`不会备份此目录，此目录下文件不会在应用退出时删除，一般存放体积比较大，不是很重要的资源
+{% highlight objc %}
 NSString *cachesPath = NSSearchPathForDirectoriesInDomains(NSCachesDirectory, NSUserDomainMask, YES).firstObject;
 NSLog(@"%@", cachesPath);
-```
-<br/>
+{% endhighlight %}
 
-* **Library/Preferences**: 保存应用的所有偏好设置，iOS 的 `Setting（设置）`会在该目录中查找应用的设置信息，iTunes会自动备份该目录。
-```objc
+- **Library/Preferences**: 保存应用的所有偏好设置，iOS 的 `Setting（设置）`会在该目录中查找应用的设置信息，iTunes会自动备份该目录。
+{% highlight objc %}
 NSString *preferencesPath = NSSearchPathForDirectoriesInDomains(NSLibraryDirectory, NSUserDomainMask, YES).firstObject;
 preferencesPath = [preferencesPath stringByAppendingPathComponent:@"Preferences"];
 NSLog(@"%@", preferencesPath);
-```
-<br/>
+{% endhighlight %}
 
-## **了解了沙盒的基本概念后就可以进行数据持久化啦，iOS 的数据持久化方式一般有以下 5 种**
-1. **plist（属性列表）**
-2. **preferences (NSUserDefaults)**
-3. **NSKeyedArchiver (归档)**
-4. **SQLite 3**
-5. **CoreData**
+---
 
-<br/>
+# iOS的数据持久化方式一般有以下5种
+1. plist（属性列表）
+2. preferences (NSUserDefaults)
+3. NSKeyedArchiver (归档)
+4. SQLite 3
+5. CoreData
 
-## **plist（属性列表）**
+---
+
+## plist（属性列表）
 属性列表文件是一种 `XML` 文件，`Foundation` 框架中的一些对象可以与属性列表文件互相转换，可转换的类型如下：
 
-```objc
+{% highlight objc %}
 NSArray;
 NSMutableArray;
 NSDictionary;
@@ -97,12 +92,10 @@ NSMutableData;
 NSString;
 NSMutableString;
 NSNumber;
-```
+{% endhighlight %}
 
-<br/>
-
-#### 存储和使用
-```objc
+### 存储和使用
+{% highlight objc %}
 // 获取存储文件的路径
 NSString *documentPath = NSSearchPathForDirectoriesInDomains(NSDocumentDirectory, NSUserDomainMask, YES).firstObject;
 NSString *fileName = [documentPath stringByAppendingPathComponent:@"storage.plist"];
@@ -122,27 +115,23 @@ NSArray *modifyArray = @[@"hello", [NSNull null]];
 // 结果发现取出来的还是第一次存的数组
 NSArray *modifyResult = [NSArray arrayWithContentsOfFile:fileName];
 NSLog(@"modify result :%@", modifyResult);
-```
+{% endhighlight %}
 
-<br/>
-
-#### **运行结果**
+### 运行结果
 ![plistResult](http://cl.ly/241B0p0t0g0o/Image%202016-01-18%20at%207.50.49%20%E4%B8%8B%E5%8D%88.png)
 
-<br/>
+### 注意
+- 只有上面提到的特定类型才能用 plist 进行存储
+- `writeToFile: atomically:` 的`atom`
+- 当需要存的对象里面包含`NULL`时，存文件会失败。（很多情况下是服务端返回的数据包含 `null`，然后转化成对象存会失败）
 
-#### **注意**
+---
 
-* **只有上面提到的特定类型才能用 plist 进行存储**
-* **`writeToFile: atomically:` 的`atomically`参数表示是否使用辅助文件。如果为 `YES`，则先写入到一个辅助文件，然后将辅助文件重新命名为目标文件，如果为 `NO`，则直接写入目标文件。**
-* **当需要存的对象里面包含`NULL`时，存文件会失败。（很多情况下是服务端返回的数据包含 `null`，然后转化成对象存会失败）**
-
-
-<br/>
-
-## **preferences (NSUserDefaults)**
+## preferences (NSUserDefaults)
 `NSUserDefaults`是一个单例，在整个程序中只有一个实例对象，他可以用于数据的永久保存，而且简单实用。
-```objective-c
+
+{% highlight objc %}
+
 // 获取 NSUserDefaults 的单例对象
 NSUserDefaults *userDefaults = [NSUserDefaults standardUserDefaults];
 
@@ -160,28 +149,26 @@ BOOL isMale = [userDefaults boolForKey:@"isMale"];
 NSInteger age = [userDefaults integerForKey:@"age"];
 
 NSLog(@"name : %@, isMale :%d, age :%ld", nameStr, isMale, age);
-```
+{% endhighlight %}
 
-<br/>
-
-#### **结果如下**
+### 结果如下
 
 ![preferencesResult](http://cl.ly/273C1L3t020W/Image%202016-01-18%20at%209.18.02%20%E4%B8%8B%E5%8D%88.png)
 
-#### **注意**
+### 注意
 
-* **偏好设置是专门用来保存应用程序的配置信息的，一般不要在偏好设置中保存其他数据。**
-* **如果没有调用`synchronize`方法，系统会根据 I/O 情况不定时刻地保存到文件中。所以如果需要立即写入文件的就必须调用`synchronize`方法。 **
-* **偏好设置会将所有数据保存到同一个文件中。即 `preference` 目录下的一个以此应用包名来命名的 plist 文件。**
+- 偏好设置是专门用来保存应用程序的配置信息的，一般不要在偏好设置中保存其他数据。
+- 如果没有调用`synchronize`方法，系统会根据 I/O 情况不定时刻地保存到文件中。所以如果需要立即写入文件的就必须调用`synchronize`方法。
+- 偏好设置会将所有数据保存到同一个文件中。即 `preference` 目录下的一个以此应用包名来命名的 plist 文件。
 
-<br/>
+---
 
-## **NSKeyedArchiver (归档)**
+## NSKeyedArchiver (归档)
 对象归档是一种序列化方式。为了便于数据传输，先将归档序列化成一个文件，然后通过返归档将数据恢复到对象中。
 对一个对象进行完整归档需要满足的条件为：该对象的类必须实现`NSCoding`协议，而且每个成员变量应该是基本数据类型或者都是实现了`NSCoding`协议的某个类的实例。
 
 创建一个`Car`类，使其实现`NSCoding`协议
-```objc
+{% highlight objc %}
 @interface Car : NSObject <NSCoding>
 
 @property (nonatomic, copy) NSString *name;
@@ -208,10 +195,12 @@ NSLog(@"name : %@, isMale :%d, age :%ld", nameStr, isMale, age);
 }
 
 @end
-```
+{% endhighlight %}
+
+
 
 对其进行归档和解档
-```objc
+{% highlight objc %}
 // 创建对象
 Car *car = [[Car alloc] init];
 car.name = @"Aventador";
@@ -228,16 +217,16 @@ NSString *fileName = [documentPath stringByAppendingString:@"car.data"];
 Car *unarchiveCar = [NSKeyedUnarchiver unarchiveObjectWithFile:fileName];
 
 NSLog(@"car :%@ , speed :%ld", unarchiveCar.name, unarchiveCar.speed);
-```
+{% endhighlight %}
 
-#### **注意**
-* **对象必须实现`NSCoding`协议**
-* **保存文件的扩展名可以任意指定**
-* **有继承关系时，要先调用父类的归解档方法**
+### 注意
+- 对象必须实现`NSCoding`协议
+- 保存文件的扩展名可以任意指定
+- 有继承关系时，要先调用父类的归解档方法
 
-<br/>
+---
 
-## **SQLite 3**
+## SQLite 3
 `SQLite`是无数据类型的数据库，就是字段不用指定类型。虽然`SQLite`可以忽略数据类型，但从编程的规范上讲，应该在`Create Table`语句中指定数据类型。因为数据类型可以告知这个字段的含义，便于别人阅读和理解。`SQLite`支持的常见数据类型如下：
 
 * **INTEGER**: 有符号的整数类型
@@ -245,13 +234,15 @@ NSLog(@"car :%@ , speed :%ld", unarchiveCar.name, unarchiveCar.speed);
 * **TEXT**: 字符串类型，采用UTF-8和UTF-16字符编码
 * **BLOB**: 二进制大对象类型，能够存放任何二进制数据
 
-#### **首先添加类库**
+### 首先添加类库
 ![addLibrary](http://cl.ly/3D1M0P373W38/Image%202016-01-19%20at%2010.52.22%20%E4%B8%8A%E5%8D%88.png)
 
 然后导入头文件
-```objc
+{% highlight objc %}
 #import <sqlite3.h>
-```
+{% endhighlight %}
+
+
 
 在使用`SQLite`之前，我们先熟悉下它提供的一些方法
 
@@ -266,8 +257,8 @@ NSLog(@"car :%@ , speed :%ld", unarchiveCar.name, unarchiveCar.speed);
 * **sqlite_errmsg**: 返回 SQLite 的错误描述
 * **sqlite_close**: 关闭数据库连接
 
-#### **创建表**
-```objc
+### 创建表
+{% highlight objc %}
 // 获取文件路径名
 NSString *fileName = [NSSearchPathForDirectoriesInDomains(NSDocumentDirectory, NSUserDomainMask, YES).firstObject stringByAppendingString:@"person.sqlite"];
 
@@ -295,10 +286,12 @@ if (openResult == SQLITE_OK) {
     sqlite3_close(myDb);
     return;
 }
-```
+{% endhighlight %}
 
-#### **插入数据**
-```objc
+
+
+### 插入数据
+{% highlight objc %}
 // 插入10条数据
 for (int i = 1; i < 10; i++) {
     NSString *nameStr = [NSString stringWithFormat:@"happyo%i", i];
@@ -315,11 +308,13 @@ for (int i = 1; i < 10; i++) {
 }
 
 NSLog(@"插入成功");
-```
+{% endhighlight %}
 
-#### **查询**
 
-```objc
+
+### 查询
+
+{% highlight objc %}
 // 查询数据
 NSString *sqlQuery = @"SELECT name, age FROM person_info";
 sqlite3_stmt *stmt;
@@ -335,18 +330,20 @@ if (queryResult == SQLITE_OK) {
 }
 
 sqlite3_finalize(stmt);
-```
+{% endhighlight %}
+
+
 
 由于原生的 SQLite 方法都是 c 写的，比较难用。所以一般在开发过程中，我们都使用第三方开源库 `FMDB` 。关于`FMDB`，[这里](http://blog.devtang.com/blog/2012/04/22/use-fmdb/)有介绍使用的。
 
-<br/>
+---
 
-## **CoreData**
+## CoreData
 对于`CoreData`，有很多相关的文章。推荐一个，[Core Data Overview](https://www.objc.io/issues/4-core-data/core-data-overview/)，中文版[Core Data 概述](http://objccn.io/issue-4-1/)。
 
-<br/>
+---
 
-#### **相关文章**
+# 相关文章
 * [iOS沙盒机制介绍](http://www.jianshu.com/p/2944233ebac4)
 * [我要永远地记住你！（iOS中几种数据持久化方案）](http://www.jianshu.com/p/7616cbd72845)
 * [SQLite 3 Functions Preview](http://www.appcoda.com/sqlite-database-ios-app-tutorial/)
