修改文章排版

--- a/_posts/2018-01-14-函数式编程简介.md
+++ b/_posts/2018-01-14-函数式编程简介.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "函数式编程"
+title:      "函数式编程简介"
 date:       2018-01-14 20:10:10 +0800
 author:     "happyo"
 header-img: "img/post-bg-01.jpg"
@@ -37,3 +37,7 @@ header-img: "img/post-bg-01.jpg"
 ---
 1. **引用透明（Referential transparency）**：指的是函数的运行不依赖于外部变量或"状态"，只依赖于输入的参数，任何时候只要参数相同，引用函数所得到的返回值总是相同的。这使得程序的单元测试很好写，然后程序只要编译通过，90%以上的概率不会出问题。
 2. **没有副作用（No Side Effect）**：指的是函数内部与外部互动（最典型的情况，就是修改全局变量的值），产生运算以外的其他结果。它使得函数式编程各个独立的部分的执行顺序可以随意打乱。执行顺序的自由使其得以衍生出一大堆非常有用的特性，比如无锁（lock-free）的并发操作、惰性求值（lazy evaluation），还有在编译器级别上的各种性能优化技术。
+
+# 相关文章
+---
+* [函数式编程初探](http://www.ruanyifeng.com/blog/2012/04/functional_programming.html)
