删除右侧介绍弹框

--- a/_posts/2018-01-14-函数式编程简介.md
+++ b/_posts/2018-01-14-函数式编程简介.md
@@ -6,8 +6,12 @@ author:     "happyo"
 header-img: "img/post-bg-01.jpg"
 ---
 
-# 定义
+
+
+### 定义
+
 ---
+
 函数式编程（英语：functional programming）或称函数程序设计，又称泛函编程，是一种编程典范，它将电脑运算视为数学上的函数计算，并且避免使用程序状态以及易变对象。函数编程语言最重要的基础是λ演算（lambda calculus）。而且λ演算的函数可以接受函数当作输入（引数）和输出（传出值）。
 
 主要思想是把运算过程尽量写成一系列的函数调用，例如：
@@ -23,8 +27,8 @@ header-img: "img/post-bg-01.jpg"
 函数式编程需要使用函数来表示，写成如下：
 
     var result = subtract(multiply(add(1,2), 3), 4)
+###  特性
 
-# 特性
 ---
 1. **函数是“一等公民”**：指的是函数和其它数据类型处于平等地位，可以把函数赋值给其他变量，也可以作为参数传入另一个函数，或者作为别的函数的返回值。
 2. **变量值不可变**：纯函数式编程中的“变量”不是命令式编程中的“变量”，即储存状态的单元，而是代数中的“变量”，即一个值的名称。“变量”的值是不可变的，也就是说不允许像命令式编程中那样多次给一个变量赋值。比如“x = x + 1”，这个在程序员看来是对的，但在数学家眼中这个等式为假。正因为变量不可变，所以函数式编程中不使用for，while等等控制语句，一般使用递归来替代。
@@ -33,11 +37,13 @@ header-img: "img/post-bg-01.jpg"
 5. **柯里化（Currying）**
 6. **闭包（Closure）**
 
-# 好处
+### 好处
+
 ---
 1. **引用透明（Referential transparency）**：指的是函数的运行不依赖于外部变量或"状态"，只依赖于输入的参数，任何时候只要参数相同，引用函数所得到的返回值总是相同的。这使得程序的单元测试很好写，然后程序只要编译通过，90%以上的概率不会出问题。
 2. **没有副作用（No Side Effect）**：指的是函数内部与外部互动（最典型的情况，就是修改全局变量的值），产生运算以外的其他结果。它使得函数式编程各个独立的部分的执行顺序可以随意打乱。执行顺序的自由使其得以衍生出一大堆非常有用的特性，比如无锁（lock-free）的并发操作、惰性求值（lazy evaluation），还有在编译器级别上的各种性能优化技术。
 
-# 相关文章
+### 相关文章
+
 ---
 * [函数式编程初探](http://www.ruanyifeng.com/blog/2012/04/functional_programming.html)
