修改函数式编程文章

--- a/_posts/2018-01-14-函数式编程简介.md
+++ b/_posts/2018-01-14-函数式编程简介.md
@@ -3,47 +3,50 @@ layout:     post
 title:      "函数式编程简介"
 date:       2018-01-14 20:10:10 +0800
 author:     "happyo"
-header-img: "img/post-bg-01.jpg"
 ---
 
+函数式编程（functional programming）是一种编程范式，它将电脑运算视为数学上的函数计算，并且避免使用程序状态以及易变对象。函数编程语言最重要的基础是λ演算（lambda calculus）。
+
+函数式编程有一下几个概念
+
+#### 函数是“一等公民”（first-class）
+
+First-class function 指的是函数可以存储在变量或者其他数据结构中；可以被当作参数传入其他函数；可以被当作函数的返回值。在面向对象编程中，对象（object）就是“一等公民”，可以把函数式编程中的函数类比成面向对象编程中的对象。
+
+#### 纯函数（pure functions）
+
+纯函数没有“副作用”（side effect），意思是函数不会影响到外界的状态，例如修改变量等等。这就带来了一些特有的好处：
+
+- 在代码中，如果一个纯函数不再使用了，那么可以直接删除掉，完全不会影响到其他逻辑。
+- 在调用纯函数时，如果参数不变，那么返回结果也不会变。
+- 因为在两个纯函数之间没有数据依赖，所以纯函数是天然线程安全的（thread-safe），并且可以并行计算。
+- 如果整个语言都没有“副作用”，那么就可以使用任意的求值策略，比如haskell中的惰性求值（lazy evaluation）。
+
+#### 高阶函数（higher-order function）
+
+高阶函数是接受一个或多个函数作为输入或者输出一个函数的函数，常见的高阶函数有map，filter，reduce等等。
+
+#### 部分函数应用（partial function application）
+
+当一个函数有多个参数的时候，我们可以直接赋值其中的一部分，返回的结果是一个接受剩下参数返回结果的函数，例如我们有个函数：
+
+```haskell
+addThree a b c = a + b + c
+```
+
+那么addThree 2，返回的就是一个接受两个数字并且返回这两个数字之和加上2的函数。
+
+#### 柯里化（curring）
+
+柯里化是把接受多个参数的函数变换成接受一个单一参数（最初函数的第一个参数）的函数，并且返回接受余下的参数而且返回结果的新函数的技术。
+
+通俗一点就是把多参函数，每次部分函数应用第一个参数，直至剩下一个参数。
+
+addThree柯里化后，表示的就是接受一个数a，然后返回一个接受两个数b，c并且返回a+b+c的函数。
 
 
-### 定义
-
-函数式编程（英语：functional programming）或称函数程序设计，又称泛函编程，是一种编程典范，它将电脑运算视为数学上的函数计算，并且避免使用程序状态以及易变对象。函数编程语言最重要的基础是λ演算（lambda calculus）。而且λ演算的函数可以接受函数当作输入（引数）和输出（传出值）。
-
-主要思想是把运算过程尽量写成一系列的函数调用，例如：
-
-
-    (1 + 2) * 3 - 4
-
-
-传统的过程式编程可能这样写：
-
-    a
-    
-    var a = 1 + 2
-    var b = a * 3
-    var c = b - 4
-    
-
-函数式编程需要使用函数来表示，写成如下：
-
-    var result = subtract(multiply(add(1,2), 3), 4)
-###  特性
-
-1. **函数是“一等公民”**：指的是函数和其它数据类型处于平等地位，可以把函数赋值给其他变量，也可以作为参数传入另一个函数，或者作为别的函数的返回值。
-2. **变量值不可变**：纯函数式编程中的“变量”不是命令式编程中的“变量”，即储存状态的单元，而是代数中的“变量”，即一个值的名称。“变量”的值是不可变的，也就是说不允许像命令式编程中那样多次给一个变量赋值。比如“x = x + 1”，这个在程序员看来是对的，但在数学家眼中这个等式为假。正因为变量不可变，所以函数式编程中不使用for，while等等控制语句，一般使用递归来替代。
-3. **高阶函数（Higher-order function）**：高阶函数是接受一个或多个函数作为输入或者输出一个函数的函数，通俗一点就是这个函数参数里有函数或者返回值是函数，那么这个函数就是高阶函数。常用的高阶函数有map，filter，reduce等等
-4. **偏应用函数（Partially Applied Functions）**
-5. **柯里化（Currying）**
-6. **闭包（Closure）**
-
-### 好处
-
-1. **引用透明（Referential transparency）**：指的是函数的运行不依赖于外部变量或"状态"，只依赖于输入的参数，任何时候只要参数相同，引用函数所得到的返回值总是相同的。这使得程序的单元测试很好写，然后程序只要编译通过，90%以上的概率不会出问题。
-2. **没有副作用（No Side Effect）**：指的是函数内部与外部互动（最典型的情况，就是修改全局变量的值），产生运算以外的其他结果。它使得函数式编程各个独立的部分的执行顺序可以随意打乱。执行顺序的自由使其得以衍生出一大堆非常有用的特性，比如无锁（lock-free）的并发操作、惰性求值（lazy evaluation），还有在编译器级别上的各种性能优化技术。
 
 ### 相关文章
 
-* [函数式编程初探](http://www.ruanyifeng.com/blog/2012/04/functional_programming.html)
+- [函数式编程初探](http://www.ruanyifeng.com/blog/2012/04/functional_programming.html)
+- [Functional programming](https://en.wikipedia.org/wiki/Functional_programming)
