修改文章样式

--- a/_posts/2021-02-23-how-to-read-book.org
+++ b/_posts/2021-02-23-how-to-read-book.org
@@ -2,53 +2,53 @@
 #+LAYOUT: post
 * 第一章 阅读的活力与艺术
 ** 主动的阅读
-*** 读书是一件多少主动的事
-*** 越主动效果越好
-*** 作者和听者相当于投手和捕手，只有双方密切合作时才能达到最好的效果。读者想“接住”多少意念完全看他在阅读时多么主动，以及他投入不同心思来阅读的技巧如何。
++ 读书是一件多少主动的事
++ 越主动效果越好
++ 作者和听者相当于投手和捕手，只有双方密切合作时才能达到最好的效果。读者想“接住”多少意念完全看他在阅读时多么主动，以及他投入不同心思来阅读的技巧如何。
 ** 阅读的目标
-*** 为获得资讯
-*** 为求得理解
++ 为获得资讯
++ 为求得理解
 * 第二章 阅读的层次
 ** 基础阅读（elementary reading）
-*** 表示理解句子在说什么，比如“猫坐在帽子上”
++ 表示理解句子在说什么，比如“猫坐在帽子上”
 ** 检视阅读（inspectional reading）
-*** 特点在强调时间，在规定时间内读完一本书，例如十五分钟。
-*** 又可称为略读或预读
-*** 需要理解“这本书在谈什么”，“这是哪一类书-小说，历史还是科学论文？”
++ 特点在强调时间，在规定时间内读完一本书，例如十五分钟。
++ 又可称为略读或预读
++ 需要理解“这本书在谈什么”，“这是哪一类书-小说，历史还是科学论文？”
 ** 分析阅读（analytical reading）
-*** 在无限时间内，全盘的，完整的阅读
-*** 要把书读成自己的，咀嚼消化一本书
++ 在无限时间内，全盘的，完整的阅读
++ 要把书读成自己的，咀嚼消化一本书
 ** 主题阅读（syntopicalreading）
-*** 或者称为比较阅读（comparative reading）
-*** 阅读者会读很多书，而不是一本书，并列举出这些书的相关之处，提出一个所有书都谈到的主题。
++ 或者称为比较阅读（comparative reading）
++ 阅读者会读很多书，而不是一本书，并列举出这些书的相关之处，提出一个所有书都谈到的主题。
 * 第三章 阅读的第一个层次：基础阅读
 ** 学习阅读的阶段
-*** 第一阶段：阅读准备阶段，良好的视力听力，保持注意力等。
-*** 第二阶段：看图识字等。
-*** 第三阶段：快速建立字汇的能力，从上下文提供的线索，“揭发”不熟悉的字眼。
-*** 第四阶段：精炼与增进前面所学的技巧。
++ 第一阶段：阅读准备阶段，良好的视力听力，保持注意力等。
++ 第二阶段：看图识字等。
++ 第三阶段：快速建立字汇的能力，从上下文提供的线索，“揭发”不熟悉的字眼。
++ 第四阶段：精炼与增进前面所学的技巧。
 ** 这四个阶段包含在第一个层次中
 * 第四章 阅读的第二个层次：检视阅读
 ** 检视阅读一：有系统的略读或粗读
 当我们不知道自己想不想读这本书，或者不知道这本书是否值得做分析阅读，亦或者我们想要发掘所有的东西，但是时间有限。
-*** 先看书名页，如果有序就先看序。完成这个步骤之前，你对这本书的主题已经有概念了，可以将这本书归类一下。
-*** 研究目录页，对这本书的基本架构做概括性的理解。
-*** 如果书中附有索引，也要检阅一下。快速评估下这本书涵盖了哪些议题范围，以及所提到的书籍种类与作者等等。如果哪一条词汇很重要，至少要看下引用到这个词目的某几页内文。
-*** 如果是本包着书衣的新书，可以读下出版者的介绍。
-*** 从你对一本书的目录有点模糊印象当中，开始挑几个看起来跟主题息息相关的篇章来看，如果有摘要，那么读一下。
-*** 最后一步，把书打开，东翻翻西翻翻，念个一两段，有时候连续几页，但不要太多。就这样把全书翻过一遍，随时寻找主要论点的讯号，留意主题的基本脉动。最重要的是，不要忽略最后的两三页。
++ 先看书名页，如果有序就先看序。完成这个步骤之前，你对这本书的主题已经有概念了，可以将这本书归类一下。
++ 研究目录页，对这本书的基本架构做概括性的理解。
++ 如果书中附有索引，也要检阅一下。快速评估下这本书涵盖了哪些议题范围，以及所提到的书籍种类与作者等等。如果哪一条词汇很重要，至少要看下引用到这个词目的某几页内文。
++ 如果是本包着书衣的新书，可以读下出版者的介绍。
++ 从你对一本书的目录有点模糊印象当中，开始挑几个看起来跟主题息息相关的篇章来看，如果有摘要，那么读一下。
++ 最后一步，把书打开，东翻翻西翻翻，念个一两段，有时候连续几页，但不要太多。就这样把全书翻过一遍，随时寻找主要论点的讯号，留意主题的基本脉动。最重要的是，不要忽略最后的两三页。
 ** 检视阅读二：粗线的阅读
 头一次面对一本难读的书的时候，从头到尾先读完一遍，碰到不懂的地方不要停下来查询或思索。略过那些不懂的部分，很快你会读到你看得懂的地方，集中精神在这个部分。
 *** 阅读的速度:检视阅读是一种在有限时间当中，充分了解一本书的艺术。
-**** 不只是要能读得快，还要能用不同的速度来阅读--要知道什么时候用什么样的速度是恰当的。
-**** 每一本书，不论是多么难读的书，在无关紧要的间隙部分就可以读快一点。而一本好书，总会包含一些比较困难，应该慢慢阅读的内容。
++ 不只是要能读得快，还要能用不同的速度来阅读--要知道什么时候用什么样的速度是恰当的。
++ 每一本书，不论是多么难读的书，在无关紧要的间隙部分就可以读快一点。而一本好书，总会包含一些比较困难，应该慢慢阅读的内容。
 *** 逗留与倒退
-**** 阅读一行字的时候会在五六个地方发生“逗留”。
-**** 不熟练的阅读者在看过两三行后，眼睛会“倒退”到原点。
-**** 大拇指与食指，中指并在一起，顺着字移动，眼睛跟着，勤加练习。
++ 阅读一行字的时候会在五六个地方发生“逗留”。
++ 不熟练的阅读者在看过两三行后，眼睛会“倒退”到原点。
++ 大拇指与食指，中指并在一起，顺着字移动，眼睛跟着，勤加练习。
 *** 理解的问题
-**** 阅读速度加快并不能加快理解力。
-**** 只能使我们保持阅读的专注。
++ 阅读速度加快并不能加快理解力。
++ 只能使我们保持阅读的专注。
 *** 检视阅读的摘要
 以下简短的几句话是本章的摘要。阅读的速度并非只有单一的一种，重点在如何读出不同的速度感，知道在阅读某种读物时该用什么样的速度。超快的速读法是引人怀疑的一种成就，那只是表现你在阅读一种根本不值得读的读物。更好的秘方是：在阅读一本书的时候，慢不该慢到不值得，快不该快到有损于满足与理解。不论怎么说，阅读的速度，不论是快还是慢，只不过是阅读问题一个微小的部分而已。
 最后，在第一次阅读一本难读的书时，不要企图了解每一个字句。这是最最重要的一个规则。这也是检视阅读的基本概念。不要害怕，或是担忧自己似乎读得很肤浅。就算是最难读的书也快快地读一遍。当你再读第二次时，你就已经准备好要读这本书了。
@@ -58,27 +58,64 @@
 如果想要从阅读中获得成长，必须要保持清醒，不要胡思乱想。
 ** 主动的阅读基础：一个阅读者要提出的四个基本问题
 在阅读的时候要养成问问题的习惯，除此之外，还需要知道如何精准，正确的回答问题。如此训练而来的能力，就是阅读的艺术。要保持主动阅读还要有技巧--能战胜最初觉得自己能力不足部分，进而自我提升的艺术。
-*** 整体来说，这本书到底在谈些什么？
-*** 作者细部说了什么，怎么说的？
-*** 这本书说的有道理吗？是全部有道理，还是部分有道理？
-*** 这本书跟你有什么关系？
++ 整体来说，这本书到底在谈些什么？
++ 作者细部说了什么，怎么说的？
++ 这本书说的有道理吗？是全部有道理，还是部分有道理？
++ 这本书跟你有什么关系？
 ** 如何让一本书真正的属于你自己
 你必须读出言外之意，才会有更大的收获。
 *** 要真正完全拥有一本书，把书变成你的一部分，最好的方法就是--要去写下来。
 *** 在书上做笔记是不可或缺的事
-**** 第一，让你保持清醒
-**** 第二，阅读如果是主动的话就有思考，思考用语言表达出来。
-**** 第三，将感想写下来，能帮助你记住作者的思想。
++ 第一，让你保持清醒
++ 第二，阅读如果是主动的话就有思考，思考用语言表达出来。
++ 第三，将感想写下来，能帮助你记住作者的思想。
 *** 做笔记的方法
 书本前的空白页可以将全书的大纲写出来
-**** 画底线--在主要的重点，或重要又有力量的句子下画线。
-**** 在画底线处的栏外再加划一道线--把你已经画线的部分再强调一遍，或是某一段很重要，如果底线太长了，便在这一整段外加一个记号。
-**** 在空白处做星号或其他符号--要慎用，只用来强调书中十来个最重要的声明或段落即可。还可以折个角或是夹一张书签。
-**** 在空白处编号--做的发出一连串重要陈述时，可以做顺序编号。
-**** 在空白处记下其他页码--强调作者在书中其他部分相同的论点或相关的要点，或是观点不同的地方。一般用 Cf 这样的记号。
-**** 将关键字或者句子圈起来--跟画底线差不多。
-**** 在书页的空白处做笔记--在阅读某一章节时，你可能会有问题（或答案），记下来，可以帮你回想。也可以将论点简化。
++ 画底线--在主要的重点，或重要又有力量的句子下画线。
++ 在画底线处的栏外再加划一道线--把你已经画线的部分再强调一遍，或是某一段很重要，如果底线太长了，便在这一整段外加一个记号。
++ 在空白处做星号或其他符号--要慎用，只用来强调书中十来个最重要的声明或段落即可。还可以折个角或是夹一张书签。
++ 在空白处编号--做的发出一连串重要陈述时，可以做顺序编号。
++ 在空白处记下其他页码--强调作者在书中其他部分相同的论点或相关的要点，或是观点不同的地方。一般用 Cf 这样的记号。
++ 将关键字或者句子圈起来--跟画底线差不多。
++ 在书页的空白处做笔记--在阅读某一章节时，你可能会有问题（或答案），记下来，可以帮你回想。也可以将论点简化。
+*** 三种笔记种类
+**** 结构笔记（structureal note-making）
++ 检视阅读中需要回答这几个问题：第一，这是什么样的一本书？第二，整本书在谈的是什么？第三，作者是借着怎样的整体架构，来发展他的观点或陈述他对这个主题的理解。
++ 将上面问题的答案写下来，最好的地方时目录页，或者是书名页。
++ 这些笔记主要的重点是全书的架构，而不是内容--至少不是细节。
+**** 概念笔记（conceptu note-making）
++ 有些很长很难读的书，我们在检视阅读中很难掌握主题表达的想法。
++ 在分析阅读时，有关这本书准确性与意义的问题，你就需要提出答案。
++ 这个时候你做的笔记不再是跟结构相关，而是跟概念相关。
++ 这些概念是作者的观点，当你读得越深越广的时候，便也会出现自己的观点。
++ 空白处记下的页码不只是本书的页码，也会有其他几本书的页码。
+**** 辩证笔记（dialectial note-making）
++ 熟练同时读好几本相同主题书籍的专业阅读者，可以针对一场讨论情景的笔记--这场讨论是由许多作者共同参与的。
++ 从好几本书中摘要出来，把所有相关的陈述和疑问顺序而列。
+*** 培养阅读的习惯
++ 所谓艺术或技巧，只属于那个能养成习惯，而且能依照规则来运作的人。
++ 知道一项艺术的规则，跟养成习惯是不同的。
++ 对着规则练习，就可以培养出习惯来。
+*** 由许多规则中养成一个习惯
++ 阅读和滑雪一样，需要把不同的动作连贯在一起。
++ 一定要忘掉分开的步骤，才能表现出整体的动作。而要忘掉单一的步骤，你必须先分别学习每一个单一的动作。
++ 规则的多样化，意味着要养成一个习惯的复杂度，而非表示要形成许多个不同的习惯。
++ 养成习惯后可以试着挑战更困难的书了。
 * 第六章 一本书的分类
+** 书籍分类的重要性
++ 你一定要知道自己在读的是哪一类书，而且越早知道越好。
++ 一本论说性的书的主要目的是在传达知识。
++ 分析阅读的第一个规则非常适合来阅读非小说，论说性的书。
+** 从一本书的书名中你能学到什么
++ 阅读书名很重要，但还不够，除非你能在心中有一个分类的标准。
++ 主要的分类法，一种是虚构的小说类，另一种是传达知识，说明性的论说类。在论说性的书籍中，我们可以更进一步的将历史从哲学中分类出来。
+** 实用性 VS 理论性作品
++ 知识与行动之间的区别
++ 纯科学与应用科学的区别
++ 理论性的作品是在教你这是什么，实用性的作品是在教你如何去做你想要做的事，或你认为应该做的事。
++ 这本书是实用的书。任何一本书告诉你该要做什么，或如何去做，都是实用的书。
+** 理论性作品的分类
+*** 传统的分法，理论性的作品会被分类为历史，科学和哲学等等。
 * 第七章 透视一本书
 * 第八章 找出与作者共通的词义
 * 第九章 判断作者的主旨
