modify: blog code highlight

--- a/content/posts/2016-01-12-iOS 数据持久化.md
+++ b/content/posts/2016-01-12-iOS 数据持久化.md
@@ -12,55 +12,55 @@ draft: false
 - extension 是 iOS8 新开放的一种对几个固定系统区域的拓展机制，它可以在一定程度上弥补 iOS 的沙盒机制对应用间的通信限制
 - 应用沙盒一般包括以下几个文件目录:
 
-{% highlight objc %}
+```objc
 .app
 Documents
 Library  
 ---Caches
 ---Preferences
 tmp
-{% endhighlight %}
+```
 
 # 目录简介及获取
 ---
 - **沙盒根目录获取**: 获取如下
-{% highlight objc %}
+```objc
 NSString *homePath = NSHomeDirectory();
 NSLog(@"%@", homePath);
-{% endhighlight %}
+```
 
 - **.app文件**: 这里面存放的是应用程序的源文件，包括资源文件和可执行文件。
-{% highlight objc %}
+```objc
 NSString *appPath = [[NSBundle mainBundle] bundlePath];
 NSLog(@"%@", appPath);
-{% endhighlight %}
+```
 
 - **Documents**: 保存应用运行时生成的需要持久化的数据，`iTunes` 会自动备份该目录。
-{% highlight objc %}
+```objc
 NSString *documentPath = NSSearchPathForDirectoriesInDomains(NSDocumentDirectory, NSUserDomainMask, YES).firstObject;
 NSLog(@"%@", documentPath);
 {% endhighlight %}
 
 - **tmp**: 保存应用运行时所需的临时数据，使用完毕后再将对应的文件从该目录删除，应用没有运行时，系统也可能会自动清理该目录下的文件，`iTunes` 不会同步该目录，iPhone 重启时该目录下的文件会丢失。
-{% highlight objc %}
+```objc
 NSString *tmpPath = NSTemporaryDirectory();
 NSLog(@"%@", tmpPath);
 {% endhighlight %}
 
 - **Library**: 存储程序的默认设置和其他状态信息，`iTunes `会自动备份该目录。
-{% highlight objc %}
+```objc
 NSString *libraryPath = NSSearchPathForDirectoriesInDomains(NSLibraryDirectory, NSUserDomainMask, YES).firstObject;
 NSLog(@"%@", libraryPath);
 {% endhighlight %}
 
 - **Library/Caches**: 存放缓存文件，`iTunes`不会备份此目录，此目录下文件不会在应用退出时删除，一般存放体积比较大，不是很重要的资源
-{% highlight objc %}
+```objc
 NSString *cachesPath = NSSearchPathForDirectoriesInDomains(NSCachesDirectory, NSUserDomainMask, YES).firstObject;
 NSLog(@"%@", cachesPath);
 {% endhighlight %}
 
 - **Library/Preferences**: 保存应用的所有偏好设置，iOS 的 `Setting（设置）`会在该目录中查找应用的设置信息，iTunes会自动备份该目录。
-{% highlight objc %}
+```objc
 NSString *preferencesPath = NSSearchPathForDirectoriesInDomains(NSLibraryDirectory, NSUserDomainMask, YES).firstObject;
 preferencesPath = [preferencesPath stringByAppendingPathComponent:@"Preferences"];
 NSLog(@"%@", preferencesPath);
@@ -78,7 +78,7 @@ NSLog(@"%@", preferencesPath);
 
 属性列表文件是一种 `XML` 文件，`Foundation` 框架中的一些对象可以与属性列表文件互相转换，可转换的类型如下：
 
-{% highlight objc %}
+```objc
 NSArray;
 NSMutableArray;
 NSDictionary;
@@ -88,10 +88,10 @@ NSMutableData;
 NSString;
 NSMutableString;
 NSNumber;
-{% endhighlight %}
+```
 
 ### 存储和使用
-{% highlight objc %}
+```objc
 // 获取存储文件的路径
 NSString *documentPath = NSSearchPathForDirectoriesInDomains(NSDocumentDirectory, NSUserDomainMask, YES).firstObject;
 NSString *fileName = [documentPath stringByAppendingPathComponent:@"storage.plist"];
@@ -111,7 +111,7 @@ NSArray *modifyArray = @[@"hello", [NSNull null]];
 // 结果发现取出来的还是第一次存的数组
 NSArray *modifyResult = [NSArray arrayWithContentsOfFile:fileName];
 NSLog(@"modify result :%@", modifyResult);
-{% endhighlight %}
+```
 
 ### 运行结果
 ![plistResult](http://cl.ly/241B0p0t0g0o/Image%202016-01-18%20at%207.50.49%20%E4%B8%8B%E5%8D%88.png)
@@ -126,7 +126,7 @@ NSLog(@"modify result :%@", modifyResult);
 ## preferences (NSUserDefaults)
 `NSUserDefaults`是一个单例，在整个程序中只有一个实例对象，他可以用于数据的永久保存，而且简单实用。
 
-{% highlight objc %}
+```objc
 
 // 获取 NSUserDefaults 的单例对象
 NSUserDefaults *userDefaults = [NSUserDefaults standardUserDefaults];
@@ -145,7 +145,7 @@ BOOL isMale = [userDefaults boolForKey:@"isMale"];
 NSInteger age = [userDefaults integerForKey:@"age"];
 
 NSLog(@"name : %@, isMale :%d, age :%ld", nameStr, isMale, age);
-{% endhighlight %}
+```
 
 ### 结果如下
 
@@ -162,7 +162,7 @@ NSLog(@"name : %@, isMale :%d, age :%ld", nameStr, isMale, age);
 对一个对象进行完整归档需要满足的条件为：该对象的类必须实现`NSCoding`协议，而且每个成员变量应该是基本数据类型或者都是实现了`NSCoding`协议的某个类的实例。
 
 创建一个`Car`类，使其实现`NSCoding`协议
-{% highlight objc %}
+```objc
 @interface Car : NSObject <NSCoding>
 
 @property (nonatomic, copy) NSString *name;
@@ -189,12 +189,12 @@ NSLog(@"name : %@, isMale :%d, age :%ld", nameStr, isMale, age);
 }
 
 @end
-{% endhighlight %}
+```
 
 
 
 对其进行归档和解档
-{% highlight objc %}
+```objc
 // 创建对象
 Car *car = [[Car alloc] init];
 car.name = @"Aventador";
@@ -211,7 +211,7 @@ NSString *fileName = [documentPath stringByAppendingString:@"car.data"];
 Car *unarchiveCar = [NSKeyedUnarchiver unarchiveObjectWithFile:fileName];
 
 NSLog(@"car :%@ , speed :%ld", unarchiveCar.name, unarchiveCar.speed);
-{% endhighlight %}
+```
 
 ### 注意
 - 对象必须实现`NSCoding`协议
@@ -230,9 +230,9 @@ NSLog(@"car :%@ , speed :%ld", unarchiveCar.name, unarchiveCar.speed);
 ![addLibrary](http://cl.ly/3D1M0P373W38/Image%202016-01-19%20at%2010.52.22%20%E4%B8%8A%E5%8D%88.png)
 
 然后导入头文件
-{% highlight objc %}
+```objc
 #import <sqlite3.h>
-{% endhighlight %}
+```
 
 
 
@@ -250,7 +250,7 @@ NSLog(@"car :%@ , speed :%ld", unarchiveCar.name, unarchiveCar.speed);
 * **sqlite_close**: 关闭数据库连接
 
 ### 创建表
-{% highlight objc %}
+```objc
 // 获取文件路径名
 NSString *fileName = [NSSearchPathForDirectoriesInDomains(NSDocumentDirectory, NSUserDomainMask, YES).firstObject stringByAppendingString:@"person.sqlite"];
 
@@ -278,12 +278,12 @@ if (openResult == SQLITE_OK) {
     sqlite3_close(myDb);
     return;
 }
-{% endhighlight %}
+```
 
 
 
 ### 插入数据
-{% highlight objc %}
+```objc
 // 插入10条数据
 for (int i = 1; i < 10; i++) {
     NSString *nameStr = [NSString stringWithFormat:@"happyo%i", i];
@@ -300,13 +300,13 @@ for (int i = 1; i < 10; i++) {
 }
 
 NSLog(@"插入成功");
-{% endhighlight %}
+```
 
 
 
 ### 查询
 
-{% highlight objc %}
+```objc
 // 查询数据
 NSString *sqlQuery = @"SELECT name, age FROM person_info";
 sqlite3_stmt *stmt;
@@ -322,7 +322,7 @@ if (queryResult == SQLITE_OK) {
 }
 
 sqlite3_finalize(stmt);
-{% endhighlight %}
+```
 
 
 
