--- a/content/posts/2021-02-23-how-to-read-book.org
+++ b/content/posts/2021-02-23-how-to-read-book.org
@@ -117,6 +117,17 @@
 ** 理论性作品的分类
 *** 传统的分法，理论性的作品会被分类为历史，科学和哲学等等。
 * 第七章 透视一本书
+每本书都有一套自己的骨架，我们在分析阅读的时候就需要找出这个骨架。
+*分析阅读的第二个规则是* _使用一个单一的句子，或者几句话描述整本书的内容_
+*第三个规则是* _将书中重要的篇章列举出来，说明其次序如何组成整体_
+第二个规则主要强调整体性，第三个规则则是强调复杂性
+第三个规则有一套可以运用的公式：
+(1) 作者将全书分为五个部分，第一部分说xxx，第二部分说xxx，...
+(2) 第一部分又分为三个段落，第一段落说xx，...
+(3) 段落分成阶段，...
+(4) 阶段中包含重点 ...
+
+并不是所有的书都要按照这样来写，只有少数几本才需要深度解析。人造的东西是不完美的，所以没有一本书是完美的，也就不值得写出完美的纲要。
 * 第八章 找出与作者共通的词义
 * 第九章 判断作者的主旨
 * 第十章 公正的评断一本书
