--- a/content/posts/2021-02-23-how-to-read-book.org
+++ b/content/posts/2021-02-23-how-to-read-book.org
@@ -102,6 +102,7 @@
 + 规则的多样化，意味着要养成一个习惯的复杂度，而非表示要形成许多个不同的习惯。
 + 养成习惯后可以试着挑战更困难的书了。
 * 第六章 一本书的分类
+*分析阅读的第一个规则是* _你要知道自己在读的是哪一类书_
 ** 书籍分类的重要性
 + 你一定要知道自己在读的是哪一类书，而且越早知道越好。
 + 一本论说性的书的主要目的是在传达知识。
@@ -128,7 +129,20 @@
 (4) 阶段中包含重点 ...
 
 并不是所有的书都要按照这样来写，只有少数几本才需要深度解析。人造的东西是不完美的，所以没有一本书是完美的，也就不值得写出完美的纲要。
+*第四个规则是* _找出作者要问题的问题_
+这本书的内容就是问题的答案，而问题作者不一定会直接的告诉你。如果问题很复杂，则还要能说出次要问题。
+** 分析阅读的第一阶段
+找出一本书在谈些什么的四个规则：
+1. 依照书的种类和主题分类
+2. 用最简短的句子说出整本书在谈什么
+3. 按照顺序列出全书的重要部分，及各个部分的纲要
+4. 找出作者在问的问题，或者作者想要解决的问题 
 * 第八章 找出与作者共通的词义
+** 分析阅读的第二个阶段
+包含四个规则：
+*** 第一个规则： 找出共通的词义，也就是达成共识（coming to terms）
+*** 
+
 * 第九章 判断作者的主旨
 * 第十章 公正的评断一本书
 * 第十一章 赞同或反对作者
